# xqrode

./: .editorconfig  .gitlab-ci.yml  Cargo.toml  README.md  rustfmt.toml
gazo/: Cargo.toml
gazo-cli/: Cargo.toml
gazo-cli/src/: main.rs
gazo/src/: backend.rs  capture.rs  clap.rs  gazo.rs  lib.rs  main.rs  rectangle.rs  transform.rs  wayland.rs
libshotgun/: Cargo.toml  README.md
libshotgun/src/: lib.rs  util.rs
qrode/: Cargo.toml  README.md
qrode/src/: main.rs
src/: main.rs
