[package]
name = "qrode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.30.0-beta.3"
wayland-protocols = {version = "0.30.0-beta.3", features = ["client", "unstable"]}
wayland-protocols-wlr = {version = "0.1.0-beta.3", features = ["client"]}
regex = "1.5.6"
nix = {version = "0.24.1", features = ["fs"]}
image = "0.24.2"