[package]
name = "gazo"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.30.0-beta.3"
wayland-protocols = {version = "0.30.0-beta.3", features = ["client", "unstable"]}
wayland-protocols-wlr = {version = "0.1.0-beta.3", features = ["client"]}
regex = "1.5.6"
nix = {version = "0.24.1", features = ["fs"]}
thiserror = "1.0.31"
memmap2 = "0.5.4"
clap = {version = "3.2.1", features = ["derive"]}
mtpng = "0.3.5"
resize = "0.7.3"
rgb = "0.8.33"
