[package]
name = "gazo"
version = "0.0.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Gazo is a library to get a screen capture from Wayland compositors implementing the wlr_screencopy protocol, like Sway."
repository = "https://gitlab.com/redArch/wayland-screencopy-utilities"

[features]
clap-region-parsing = ["dep:clap", "dep:regex"]

[dependencies]
wayland-client = "0.30.0-beta.3"
wayland-protocols = {version = "0.30.0-beta.3", features = ["client", "unstable"]}
wayland-protocols-wlr = {version = "0.1.0-beta.3", features = ["client"]}
nix = {version = "0.24.1", features = ["fs"]}
thiserror = "1.0.31"
memmap2 = "0.5.4"
resize = "0.7.3"
rgb = "0.8.33"
clap = {version = "3.2.1", optional = true}
regex = {version = "1.5.6", optional = true}
