[package]
name = "libshotgun"
version = "2.2.1"
authors = ["novenary <streetwalkermc@gmail.com>", "Brenno Lemos <brenno@syndel.is>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
getopts = "0.2"
libc = "0.2"
num-traits = "0.2"
clap = "3.2.1"
regex = "1.5.6"

[dependencies.image]
default-features = false
version = "0.23"
features = ["png", "pnm"]

[dependencies.x11]
version = "2.18"
features = ["xlib", "xrandr"]
