[package]
name = "qrode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gazo = {version = "0.1.0", path = "../gazo"}
rqrr = "0.5.1"
regex = "1.5.6"
image = "0.24.2"
url = "2.2.2"
open = "2.1.3"
tempfile = "3.3.0"